--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           architecture: x64
 
       - name: Install requirements
-        run: make init && pip install flake8 mypy
+        run: make install && pip install flake8 mypy
 
       - name: Run tests
         run: make test
